--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "haphut <haphut@gmail.com>"
   ],
   "scripts": {
+    "eslint": "eslint index.js \"src\" \"test\"",
+    "eslint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check",
+    "prettier": "prettier --write index.js \"src/**/*.js\" \"test/**/*.js\"",
     "test": "mocha"
   },
   "license": "AGPL-3.0",
@@ -20,6 +23,12 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^4.0.1"
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb-base": "^12.0.2",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "mocha": "^4.0.1",
+    "prettier": "^1.7.4"
   }
 }
