--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "lodash": "^4.17.4",
+    "memory-cache": "^0.2.0",
     "moment": "^2.19.0",
     "mqtt": "^2.13.0",
     "protobufjs": "^6.8.0"
@@ -29,6 +30,7 @@
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-prettier": "^2.3.1",
+    "lolex": "^2.1.3",
     "mocha": "^4.0.1",
     "prettier": "^1.7.4"
   }
