--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
+    "bunyan": "^1.8.12",
     "lodash": "^4.17.4",
     "memory-cache": "^0.2.0",
     "moment": "^2.19.0",
