Read configuration from a YAML file

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "bunyan": "^1.8.12",
+    "js-yaml": "^3.10.0",
     "lodash": "^4.17.4",
     "memory-cache": "^0.2.0",
     "moment": "^2.19.0",
     "mqtt": "^2.13.0",
+    "neodoc": "^1.4.0",
     "protobufjs": "^6.8.0"
   },
   "devDependencies": {
