--- a/config.yaml.template
+++ b/config.yaml.template
@@ -2,16 +2,22 @@ bunyan:
   name: "bessersmith"
   level: "info"
 mqtt:
-  url: "mqtt://mqtt.hsl.fi"
-  connectionOptions:
-    clientId: "bessersmith_MY_RANDOM_SUFFIX"
-    clean: true
-  subscriptionOptions:
-    qos: 1
-  topic: "mono/dev/predictions/#"
-http:
-  listeningOptions:
-    port: 8087
+  subscribe:
+    url: "mqtt://mqtt.hsl.fi"
+    connectionOptions:
+      clientId: "bessersmith-sub-MY_RANDOM_SUFFIX_1"
+      clean: true
+    subscriptionOptions:
+      qos: 1
+    topic: "mono/dev/predictions/#"
+  publish:
+    url: "mqtt://mqtt.hsl.fi"
+    connectionOptions:
+      clientId: "bessersmith-pub-MY_RANDOM_SUFFIX_2"
+      clean: true
+    publishingOptions:
+      qos: 1
+    topic: "gtfsrt/v1/fi/hsl/tripupdates"
 cache:
   ttlInSeconds: 7200
 protoFilename: "gtfs-realtime.proto"
