--- a/config.yaml.template
+++ b/config.yaml.template
@@ -3,21 +3,21 @@ bunyan:
   level: "info"
 mqtt:
   subscribe:
-    url: "mqtt://mqtt.hsl.fi"
+    url: "mqtt://MY_MQTT_BROKER.com"
     connectionOptions:
       clientId: "bessersmith-sub-MY_RANDOM_SUFFIX_1"
       clean: true
     subscriptionOptions:
       qos: 1
-    topic: "mono/dev/predictions/#"
+    topic: "SUBSCRIBE/TO/MONO/PREDICTIONS/#"
   publish:
-    url: "mqtt://mqtt.hsl.fi"
+    url: "mqtt://MY_MQTT_BROKER.com"
     connectionOptions:
       clientId: "bessersmith-pub-MY_RANDOM_SUFFIX_2"
       clean: true
     publishingOptions:
       qos: 1
-    topic: "gtfsrt/v1/fi/hsl/tripupdates"
+    topic: "PUBLISH/GTFS/REALTIME/TRIPUPDATES"
 cache:
   ttlInSeconds: 7200
 protoFilename: "gtfs-realtime.proto"
