--- a/config.yaml
+++ b/config.yaml
@@ -12,6 +12,7 @@ mqtt:
       port: 8883
       clientId: "bessersmith-sub-MY_RANDOM_SUFFIX_1"
       clean: false
+      reconnectPeriod: 10000
       username: MY_MQTT_USERNAME_1
       password: MY_MQTT_PASSWORD_1
     subscriptionOptions:
@@ -25,6 +26,7 @@ mqtt:
       port: 8883
       clientId: "bessersmith-pub-MY_RANDOM_SUFFIX_2"
       clean: true
+      reconnectPeriod: 10000
       username: MY_MQTT_USERNAME_2
       password: MY_MQTT_PASSWORD_2
     publishingOptions:
